Updated resume and the descriptions about the type of job I am seeking.

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 Joel Luellwitz
     </h1>
     <p style="text-align: center;">
-<a href="JoelLuellwitz-Resume-20240414.pdf">Resume</a> | <a href="mailto:joel.luellwitz@linux.com">Email</a> | <a href="https://github.com/eviljoel">GitHub</a> | <a href="https://www.linkedin.com/in/joelluellwitz/">LinkedIn</a>
+<a href="JoelLuellwitz-Resume-20240505.pdf">Resume</a> | <a href="mailto:joel.luellwitz@linux.com">Email</a> | <a href="https://github.com/eviljoel">GitHub</a> | <a href="https://www.linkedin.com/in/joelluellwitz/">LinkedIn</a>
     </p>
     <img src="joelLuellwitz.jpg" style="float: right; border: 5px solid #80ffcc;" />
     <h2>
 Introduction
     </h2>
     <p>
-This is a website I put together to help me with my latest job search. I am currently looking for employment as a senior network security developer. I might also be interested in development related to online privacy.
+This is a website I put together to help me with my latest job search. I am currently looking for full time, direct hire employment as a senior network developer, ideally with a security focus.
     </p>
     <h2>
 Resume
     </h2>
     <p>
-You can download my resume <a href="JoelLuellwitz-Resume-20240414.pdf">here</a>. Also, my LinkedIn is <a href="https://www.linkedin.com/in/joelluellwitz/">here</a>.
+You can download my resume <a href="JoelLuellwitz-Resume-20240505.pdf">here</a>. Also, my LinkedIn is <a href="https://www.linkedin.com/in/joelluellwitz/">here</a>.
     </p>
     <h2>
 Code Examples
