Updated OpenSSL advisory URL.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ My GitHub has some good examples of my coding style. I make all GitHub commits u
 I've also made a number of contributions and detailed bug reports on various open source projects. Here are some noteworthy examples:
       <ul>
         <li>
-Cocreated with the discovery of a vulnerability in OpenSSL. See CVE-2021-23839 in this <a href="https://www.openssl.org/news/secadv/20210216.txt">OpenSSL Security Advisory</a>.
+Cocreated with the discovery of a vulnerability in OpenSSL. See CVE-2021-23839 in this <a href="https://openssl-library.org/news/secadv/20210216.txt">OpenSSL Security Advisory</a>.
         </li>
         <li>
 I fixed a <a href="https://bugs.launchpad.net/ubuntu/+source/dropbear/+bug/1652091/comments/7">bug</a> in the Ubuntu Linux <i>dropbear</i> packaging. The fix commit is <a href="https://salsa.debian.org/debian/dropbear/-/commit/617cc6f67d57932a5f421c08fdc303bad3a3d6db">here</a>.
