Added a link to a Java demo application.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Joel Luellwitz
 Introduction
     </h2>
     <p>
-This is a website I put together to help me with my latest job search. I am currently looking for full time, direct hire employment as a senior network developer, ideally with a security focus.
+This is a website I put together to help me with my latest job search. I am currently looking for full time, direct hire employment as a senior software developer, ideally with a security focus.
     </p>
     <h2>
 Resume
@@ -31,6 +31,9 @@ Code Examples
     </h2>
     <p>
 My GitHub has some good examples of my coding style. I make all GitHub commits under another <a href="https://github.com/eviljoel">user account</a>.
+    </p>
+    <p>
+I recently made a <a href="https://github.com/joelluellwitz/jl0724">Java demo application</a> as part of a job application process. Unfortunately, I did not receive an offer for that position. I was asked not to upload the requirements document, but basically it is a simplified tool rental checkout and invoice application. It should demonstrate I have a good grasp of the Java language and many Java libraries.
     </p>
     <p>
 I've also made a number of contributions and detailed bug reports on various open source projects. Here are some noteworthy examples:
